# clashtui-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
src/: app.cpp  app.hpp  main.cpp
src/api/: mihomo_client.cpp  mihomo_client.hpp
src/core/: cli.cpp  cli.hpp  config.cpp  config.hpp  installer.cpp  installer.hpp  profile_manager.cpp  profile_manager.hpp  subscription.cpp  subscription.hpp  updater.cpp  updater.hpp  utils.hpp
src/daemon/: daemon.cpp  daemon.hpp  ipc_client.cpp  ipc_client.hpp  process_manager.cpp  process_manager.hpp
src/i18n/: en.hpp  i18n.hpp  zh.hpp
src/ui/: config_panel.cpp  config_panel.hpp  install_wizard.cpp  install_wizard.hpp  log_panel.cpp  log_panel.hpp  main_screen.cpp  main_screen.hpp  proxy_panel.cpp  proxy_panel.hpp  status_bar.cpp  status_bar.hpp  subscription_panel.cpp  subscription_panel.hpp
tests/: test_cli.cpp  test_config.cpp  test_daemon_ipc.cpp  test_e2e.cpp  test_i18n.cpp  test_installer.cpp  test_mihomo_client.cpp  test_process_manager.cpp  test_profile_manager.cpp  test_status_bar.cpp  test_updater.cpp
